Fork jenkins with winstone instead of jetty plugin